# introduction-to-agents

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml  ruff.toml  workshop.ipynb
assets/: ford-f150.txt  sales.parquet
code/: filemanager_agent.py  minirag.py  sales.py  sales_data_generator.py
